实现机房列表

--- a/core/static/style/layout.less
+++ b/core/static/style/layout.less
@@ -72,3 +72,14 @@ body {
     }
   }
 }
+
+.progress {
+  position: relative;
+}
+
+.progress span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  color: black;
+}
