--- a/core/view/public/monitor.jade
+++ b/core/view/public/monitor.jade
@@ -62,9 +62,9 @@ block content
             p Storage
             .progress.multi-progress
               .progress-bar.progress-bar-warning(role='progressbar', style='width: #{storage.used_per}%;')
-                span(title= '#{storage.used}%M') #{storage.used_per}%
+                span(title= '#{storage.used}G') #{storage.used_per}%
               .progress-bar.blank(role='progressbar', style='width: #{memory.free_per}%;')
-                span(title= '#{memory.free}M') #{memory.free_per}%
+                span(title= '#{storage.free}G') #{storage.free_per}%
 
     .row
       .panel.panel-default
