修改密码功能

--- a/core/view/account/login.jade
+++ b/core/view/account/login.jade
@@ -13,7 +13,7 @@ block main
     .form-group
       label.col-sm-2.col-md-offset-1.control-label(for='password')= t('account.password')
       .col-sm-5
-        input#password.form-control(type='password', name='password', required)
+        input#password.form-control(type='password', name='password')
     .form-group
       .col-sm-offset-3
         button.action-login.btn.btn-lg.btn-primary(type='button')= t('account.login')
