--- a/core/view/account/signup.jade
+++ b/core/view/account/signup.jade
@@ -17,11 +17,11 @@ block main
     .form-group
       label.col-sm-2.col-md-offset-1.control-label(for='password')= t('account.password')
       .col-sm-5
-        input#password.form-control(type='password', name='password', required)
+        input#password.form-control(type='password', name='password')
     .form-group
       label.col-sm-2.col-md-offset-1.control-label(for='password2')= t('view.account.password2')
       .col-sm-5
-        input#password2.form-control(type='password', name='password2', required)
+        input#password2.form-control(type='password', name='password2')
     .form-group
       .col-sm-offset-3
         button.action-signup.btn.btn-lg.btn-primary(type='button')= t('account.signup')
