--- a/core/view/account/setting.jade
+++ b/core/view/account/setting.jade
@@ -10,7 +10,7 @@ block main
       .form-group
         label.col-sm-2.col-md-offset-1.control-label QQ
         .col-sm-5
-          input.form-control(type='text', name='qq')
+          input.form-control(type='text', name='qq', value=account.setting.qq)
       .form-group
         .col-sm-offset-3
           button.action-save.btn.btn-lg.btn-success(type='button') 保存
