获取兑换码信息

--- a/core/view/account/setting.jade
+++ b/core/view/account/setting.jade
@@ -17,11 +17,11 @@ block main
 
   .row
     header 兑换代码
-    form.form-promo.form-horizontal
+    form.form-coupon.form-horizontal
       .form-group
         label.col-sm-2.col-md-offset-1.control-label 代码
         .col-sm-5
-          input.form-control(type='text', name='promo_code', required)
+          input.form-control(type='text', name='coupon_code', required)
       .form-group
         .col-sm-offset-3
           button.action-use.btn.btn-lg.btn-success(type='button') 使用
