--- a/core/view/public/monitor.jade
+++ b/core/view/public/monitor.jade
@@ -63,7 +63,7 @@ block content
             .progress.multi-progress
               .progress-bar.progress-bar-warning(role='progressbar', style='width: #{storage.used_per}%;')
                 span(title= '#{storage.used}G') #{storage.used_per}%
-              .progress-bar.blank(role='progressbar', style='width: #{memory.free_per}%;')
+              .progress-bar.blank(role='progressbar', style='width: #{storage.free_per}%;')
                 span(title= '#{storage.free}G') #{storage.free_per}%
 
     .row
