工单邮件通知

--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -10,7 +10,7 @@ block main
     .form-group.padding
       input#title.form-control(type='text', name='title', placeholder= t('ticket.title'),required)
     .form-group.padding
-      textarea#content.form-control(name='content', rows='15', required)
+      textarea.form-control(name='content', rows='15', required)
     .form-group.padding
       button.btn.btn-lg.btn-primary.action-create(type='button')= t('ticket.create')
 
