shadowsocks reset_password

--- a/plugin/shadowsocks/view/widget.jade
+++ b/plugin/shadowsocks/view/widget.jade
@@ -11,7 +11,7 @@ header ShadowSocks
         span.input-group-addon 密码
         input.form-control(type='text', value=account.attribute.plugin.shadowsocks.password, disabled)
         span.input-group-btn
-          button.btn.btn-default(type='button') 重置
+          button.btn.btn-default.action-reset-password(type='button') 重置
 
 .col-md-6
   .panel.panel-default
