--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -18,12 +18,9 @@ html
             a.navbar-brand(href='/')= t('app.name')
           #navbar-collapse.collapse.navbar-collapse
             ul.nav.navbar-nav
-              li
-                a(href='/public/services/') 功能支持
-              li
-                a(href='/wiki/') 用户手册
-              li
-                a(href='/public/monitor/') 服务器状态
+              for item in app.view_hook.menu_bar
+                li
+                  a(href=item.href)= item.html
               li
                 a(href='//blog.rpvhost.net', target='_blank') 官方博客
             ul.nav.navbar-nav.navbar-right
