--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -19,10 +19,12 @@ html
           #navbar-collapse.collapse.navbar-collapse
             ul.nav.navbar-nav
               for item in app.view_hook.menu_bar
-                li
-                  a(href=item.href)= item.html
-              li
-                a(href='//blog.rpvhost.net', target='_blank') 官方博客
+                if item.target
+                  li
+                    a(href=item.href, target=item.target)= item.html
+                else
+                  li
+                    a(href=item.href)= item.html
             ul.nav.navbar-nav.navbar-right
               if account
                 li
@@ -53,13 +55,14 @@ html
                 p= t('app.description')
 
     #footer
-      script.
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-49193300-2', 'auto');
-        ga('send', 'pageview');
+      if config.web.google_analytics_id
+        script.
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', '#{config.web.google_analytics_id}', 'auto');
+          ga('send', 'pageview');
       script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
       script(src='http://cdn.staticfile.org/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
       script(src='/script/layout.js')
