--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -18,7 +18,7 @@ html
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href='/')= t('app.name')
+            a.navbar-brand(href='/')= config.web.name
           #navbar-collapse.collapse.navbar-collapse
             ul.nav.navbar-nav
               for item in app.view_hook.menu_bar
