--- a/core/view/panel/pay.jade
+++ b/core/view/panel/pay.jade
@@ -15,24 +15,8 @@ block main
 
     div
       h2 淘宝
-      p 拍下对应宝贝后付款即可，购买时注意选择服务器节点选项，备注填写你在 RP 主机的用户名。
-      a.btn.btn-success(href='http://item.taobao.com/item.htm?id=38370649858') 淘宝购买
-
-  .row
-    header 机房列表
-    table.table.table-hover
-      thead
-        tr
-          th 域名
-          th 位置
-          th 说明
-      tbody
-        for node in nodes
-          tr
-            td
-              a(href='//#{node.domain}')= node.domain
-            td= node.location
-            td= node.readme
+      p 拍下对应宝贝后付款即可，购买时注意选择服务器节点选项，备注填写你的用户名。
+      a.btn.btn-success(href='http://item.taobao.com/item.htm?id=#{config.billing.taobao_item_id}') 淘宝购买
 
   .row
     header 充值记录
@@ -69,4 +53,7 @@ block main
           tr
             td= moment(item.created_at).format('YYYY-MM-DD HH:mm:ss')
             td #{item.amount.toFixed(2)} CNY
-            td #{item.attribute.plans.join(', ')} | #{item.attribute.billing_time} hours #{item.attribute.is_force ? '| force' : ''}
+            if item.type == 'billing'
+              td #{item.attribute.plans.join(', ')} | #{item.attribute.billing_time} hours #{item.attribute.is_force ? '| force' : ''}
+            else if item.type == 'service_billing' && item.attribute.service == 'shadowsocks'
+              td ShadowSocks #{item.attribute.traffic_mb} MB #{item.attribute.is_force ? '| force' : ''}
