--- a/core/view/admin/index.jade
+++ b/core/view/admin/index.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend head
-  title #{t('admin.admin_panel')} | #{t('app.name')}
+  title #{t('admin.admin_panel')} | #{config.web.name}
 
 block main
   .row
