--- a/core/view/panel/pay.jade
+++ b/core/view/panel/pay.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend head
-  title 充值 | #{t('app.name')}
+  title 充值 | #{config.web.name}
   link(rel='stylesheet', href='/style/panel/pay.css')
 
 block main
