--- a/core/view/account/login.jade
+++ b/core/view/account/login.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend head
-  title #{t('account.login')} | #{t('app.name')}
+  title #{t('account.login')} | #{config.web.name}
 
 block main
   header= t('account.login')
