--- a/core/view/account/signup.jade
+++ b/core/view/account/signup.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend head
-  title #{t('account.signup')} | #{t('app.name')}
+  title #{t('account.signup')} | #{config.web.name}
 
 block main
   header= t('account.signup')
