--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -66,6 +66,7 @@ html
           ga('create', '#{config.web.google_analytics_id}', 'auto');
           ga('send', 'pageview');
       script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
+      script(src='http://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js')
       script(src='http://cdn.staticfile.org/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
       script(src='/script/layout.js')
       block footer
