--- a/core/view/account/login.jade
+++ b/core/view/account/login.jade
@@ -21,7 +21,7 @@ block main
 prepend sidebar
   .row
     header= t('view.account.no_account')
-    a.btn.btn-lg.btn-success(href='/account/register/')= t('account.signup')
+    a.btn.btn-lg.btn-success(href='/account/register/')= t('account.register')
 
 append footer
   script(src='/script/account/login.js')
