--- a/core/view/account/register.jade
+++ b/core/view/account/register.jade
@@ -24,7 +24,7 @@ block main
         input#password2.form-control(type='password', name='password2')
     .form-group
       .col-sm-offset-3
-        button.action-signup.btn.btn-lg.btn-primary(type='button')= t('account.register')
+        button.action-register.btn.btn-lg.btn-primary(type='button')= t('account.register')
 
 prepend sidebar
   .row
