--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -73,4 +73,6 @@ html
       script(src='http://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js')
       script(src='http://cdn.staticfile.org/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
       script(src='/script/layout.js')
+      for path in hooks.view.layout.scripts
+        script(src=path)
       block footer
