--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -1,7 +1,9 @@
 extends ../layout
 
-prepend head
+prepend header
   title #{t('ticket.create_ticket')} | #{config.web.name}
+
+append header
   link(rel='stylesheet', href='/style/ticket.css')
 
 block main
