--- a/core/view/ticket/view.jade
+++ b/core/view/ticket/view.jade
@@ -1,7 +1,9 @@
 extends ../layout
 
-prepend head
+prepend header
   title #{ticket.title} | #{config.web.name}
+
+append header
   link(rel='stylesheet', href='/style/ticket.css')
 
 block main
