--- a/core/view/account/login.jade
+++ b/core/view/account/login.jade
@@ -5,15 +5,15 @@ prepend header
 
 block main
   header= t('account.login')
-  form.form-horizontal(method='post', role='form')
+  form.form-horizontal
     .form-group
-      label.col-sm-2.col-md-offset-1.control-label(for='username')= t('account.username')
+      label.col-sm-2.col-md-offset-1.control-label= t('account.username')
       .col-sm-5
-        input#username.form-control(type='text', name='username', required)
+        input.input-username.form-control(type='text', required)
     .form-group
-      label.col-sm-2.col-md-offset-1.control-label(for='password')= t('account.password')
+      label.col-sm-2.col-md-offset-1.control-label= t('account.password')
       .col-sm-5
-        input#password.form-control(type='password', name='password')
+        input.input-password.form-control(type='password')
     .form-group
       .col-sm-offset-3
         button.action-login.btn.btn-lg.btn-primary(type='button')= t('account.login')
