--- a/core/view/account/register.jade
+++ b/core/view/account/register.jade
@@ -5,23 +5,23 @@ prepend header
 
 block main
   header= t('account.register')
-  form.form-horizontal.signup-form(method='post', role='form')
+  form.form-horizontal.signup-form
     .form-group
-      label.col-sm-2.col-md-offset-1.control-label(for='username')= t('account.username')
+      label.col-sm-2.col-md-offset-1.control-label= t('account.username')
       .col-sm-5
-        input#username.form-control(type='text', name='username', required)
+        input.input-username.form-control(type='text')
     .form-group
-      label.col-sm-2.col-md-offset-1.control-label(for='email')= t('account.email')
+      label.col-sm-2.col-md-offset-1.control-label= t('account.email')
       .col-sm-5
-        input#email.form-control(type='email', name='email', required)
+        input.input-email.form-control(type='email')
     .form-group
-      label.col-sm-2.col-md-offset-1.control-label(for='password')= t('account.password')
+      label.col-sm-2.col-md-offset-1.control-label= t('account.password')
       .col-sm-5
-        input#password.form-control(type='password', name='password')
+        input.input-password.form-control(type='password')
     .form-group
-      label.col-sm-2.col-md-offset-1.control-label(for='password2')= t('view.account.password2')
+      label.col-sm-2.col-md-offset-1.control-label= t('view.account.password2')
       .col-sm-5
-        input#password2.form-control(type='password', name='password2')
+        input.input-password2.form-control(type='password')
     .form-group
       .col-sm-offset-3
         button.action-register.btn.btn-lg.btn-primary(type='button')= t('account.register')
