--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -8,11 +8,11 @@ append header
 
 block main
   header= t('ticket.create_ticket')
-  form.form-horizontal(method='post', role='form')
+  form.form-horizontal
     .form-group.padding
-      input#title.form-control(type='text', name='title', placeholder= t('ticket.title'),required)
+      input.input-title.form-control(type='text', placeholder= t('ticket.title'))
     .form-group.padding
-      textarea.form-control(name='content', rows='15', required)
+      textarea.input-content.form-control(rows='15')
     .form-group.padding
       button.btn.btn-lg.btn-primary.action-create(type='button')= t('ticket.create')
 
