--- a/core/view/ticket/view.jade
+++ b/core/view/ticket/view.jade
@@ -7,7 +7,7 @@ append header
   link(rel='stylesheet', href='/style/ticket.css')
 
 block main
-  .row.content(data-id= '#{ticket._id}')
+  .row.content(data-id='#{ticket._id}')
     header
       | #{ticket.title} &nbsp;
       if ticket.status == 'closed'
@@ -23,11 +23,12 @@ block main
 
   .row
     header= t('ticket.replies')
+
     ul.list-group
-      for reply in ticket.replys
+      for reply in ticket.replies
         li.list-group-item.clearfix
           a.pull-left
-            img(src= reply.account.setting.avatar_url)
+            img(src= reply.account.settings.avatar_url)
           .list-content
             p!= reply.content_html
             p
@@ -37,20 +38,22 @@ block main
   .row
     if ticket.status != 'closed'
       header= t('ticket.create_reply')
-    form.form-horizontal(method='post', role='form')
+
+    form.form-horizontal
       if ticket.status != 'closed'
         .form-group.padding
-          textarea.form-control#reply-content(name='content', rows='5', required)
+          textarea.form-control.input-content(rows='5')
       .form-group.padding
         if ticket.status == 'closed'
           button(disabled).btn.btn-lg.btn-primary 已关闭
         else
           button.btn.btn-lg.btn-primary.action-reply(type='button')= t('ticket.create_reply')
-          button(type='button', data-status='closed').btn.btn-lg.btn-danger.change-status= t('ticket.close_ticket')
-        if mAccount.inGroup(account, 'root') && (ticket.status == 'open' || ticket.status == 'pending')
-          button(type='button', data-status='finish').btn.btn-lg.btn-success.change-status= t('ticket.finish_ticket')
-        if mAccount.inGroup(account, 'root') && ticket.status == 'closed'
-          button(type='button', data-status='open').btn.btn-lg.btn-success.change-status= t('ticket.reopen_ticket')
+          button(type='button', data-status='closed').btn.btn-lg.btn-danger.action-update-status= t('ticket.close_ticket')
+
+        if inGroup('root') && (ticket.status == 'open' || ticket.status == 'pending')
+          button(type='button', data-status='finish').btn.btn-lg.btn-success.action-update-status= t('ticket.finish_ticket')
+        if inGroup('root') && ticket.status == 'closed'
+          button(type='button', data-status='open').btn.btn-lg.btn-success.action-update-status= t('ticket.reopen_ticket')
 
 prepend sidebar
   .row
@@ -60,17 +63,17 @@ prepend sidebar
     header= t('ticket.creator')
     li.list-group-item.clearfix
       a.pull-left
-        img(src= ticket.account.setting.avatar_url)
+        img(src= ticket.account.settings.avatar_url)
       p
         span.label.label-info= ticket.account.username
         br
-        span.label.label-default(title= ticket.created_at)= moment(ticket.created_at).fromNow()
+        span.label.label-default(title=ticket.created_at)= moment(ticket.created_at).fromNow()
 
   .row
     header= t('ticket.members')
     for member in ticket.members
       a.pull-left
-        img(src= member.setting.avatar_url, alt= member.username)
+        img(src= member.settings.avatar_url, alt= member.username)
 
 append footer
   script(src='/script/ticket/view.js')
