--- a/core/template/ticket_create_email.html
+++ b/core/template/ticket_create_email.html
@@ -1,6 +1,8 @@
 <%= ticket.content_html %>
 
-<br /><br />
+<hr />
 
-<%= account.username %>
+Created by <%= account.username %> at <%= ticket.created_at %>, View ticket:
 <a href='<%= config.web.url %>/ticket/view/?id=<%= ticket._id %>'><%= ticket._id %></a>
+<br />
+Notice from <%= config.web.name %>.
