--- a/core/template/ticket_reply_email.html
+++ b/core/template/ticket_reply_email.html
@@ -1,6 +1,8 @@
 <%= reply.content_html %>
 
-<br /><br />
+<hr />
 
-<%= account.username %>
+Replied by <%= account.username %> at <%= reply.created_at %>, View ticket:
 <a href='<%= config.web.url %>/ticket/view/?id=<%= ticket._id %>'><%= ticket._id %></a>
+<br />
+Notice from <%= config.web.name %>.
