--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -8,7 +8,7 @@ html
       for hook in selectHook('view.layout.styles')
         link(rel='stylesheet', href=hook.path)
 
-  body(data-locale-version=app.i18n.clientLocaleHash(res.language))
+  body(data-locale-version=app.i18n.clientLocaleHash(res))
     header.navbar-fixed-top
       .container
         nav.navbar.navbar-default.navbar-inverse(role='navigation')
@@ -49,8 +49,9 @@ html
                   span.glyphicon.glyphicon-globe
                 ul.dropdown-menu
                   li
-                    a(href='#') 简体中文 (zh_CN)
-                    a(href='#') English (en)
+                    a.action-switch-language(href='#', data-language='auto') #{t('languages.auto')} (auto)
+                    for language in config.i18n.available_language
+                      a.action-switch-language(href='#', data-language=language) #{t('languages.' + language)} (#{language})
 
     block content
       #content.container
@@ -74,7 +75,8 @@ html
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', '#{config.web.google_analytics_id}', 'auto');
+          ga('create', '#{config.web.google_analytic
+          s_id}', 'auto');
           ga('send', 'pageview');
       script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
       script(src='http://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js')
