--- a/plugin/rpvhost/view/index.jade
+++ b/plugin/rpvhost/view/index.jade
@@ -1,9 +1,9 @@
 extends ../../../core/view/layout
 
-prepend head
+prepend header
   title RP 主机：Linux 虚拟主机 | #{t('app.name')}
 
-append head
+append header
   link(rel='stylesheet', href='/plugin/rpvhost/style/index.css')
 
 block content
